(library
  (name market_sim_lib)
  (modules
    market_sim_lib)
  (libraries
    core)
  (preprocess (pps ppx_jane bisect_ppx)))

(executable
  (name market_sim)
  (modules
    market_sim)
  (libraries
    market_sim_lib
    core
    stdio
    yojson
    ppx_deriving_yojson.runtime)
  (preprocess (pps ppx_deriving_yojson)))
